--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -39,7 +39,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="7TE &amp; Z_Maro">
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.">
-  <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer, yeah">
+  <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Balcado ⛏" />
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft." />
@@ -96,7 +96,7 @@
           <img class="responsive-img" src="../src/img/dirt-icon.png">
           <h4>Survival</h4>
           <i class="chip">
-        <div id="rest1">
+        <div id="rest">
 Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
@@ -107,7 +107,7 @@ Loading ...</div>
           <img class="responsive-img" src="../src/img/stone-icon.png">
           <h4>Creative</h4>
           <i class="chip">
-<div id="rest2">
+<div id="rest">
 Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
@@ -118,7 +118,7 @@ Loading ...</div>
           <img class="responsive-img" src="../src/img/ender-icon.png">
           <h4>SkyBlock</h4>
           <i class="chip">
-<div id="rest3">
+<div id="rest">
 Loading ...</div>
           </i>
           <p>COMING SOON</p>
@@ -315,7 +315,7 @@ Loading ...</div>
     <div class="main">
       <div class="row" data-aos="fade-down">
         <div class="col s12">
-          <h4>Purchase ranks here!</h4>
+          <h4>Donate to help the server.</h4>
         </div>
       </div>
       <div class="row">
@@ -329,30 +329,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
+                      <td>Perk 1</td>
+                    </tr>
+                    <tr>
                       <td>10 drachmas a week</td>
                     </tr>
                     <tr>
-                      <td>Exclusive supporter tag in chat and on forums</td>
+                      <td>Perk 3</td>
                     </tr>
                     <tr>
-                      <td> Access to /nick command to change your in-game nickname</td>
+                      <td>Perk 4</td>
                     </tr>
                     <tr>
-                      <td>: Priority queue access during peak times</td>
-                    </tr>
-                    <tr>
-                      <td> Early access to new features and updates</td>
+                      <td>Perk 5</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4"> <script src="https://www.paypal.com/sdk/js?client-id=BAAYLvthc48Nt0vF3lSr-PuLiRbQX-N61aGSaaT_2nTLBlLloaZ4LQS09yfpdUFgHM9AlkPD4LAmpbXHCE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
-                  <div id="paypal-container-HR9N2GYB28DLL"></div>
-                  <script>
-                    paypal.HostedButtons({
-                      hostedButtonId: "HR9N2GYB28DLL",
-                    }).render("#paypal-container-HR9N2GYB28DLL")
-                  </script></a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/BA6LX2L8AZLB2">Donate</a>
               </div>
             </div>
           </div>
@@ -367,24 +361,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>20 drachmas a week (Includes Supporter perks)</td>
+                      <td>Perk 1</td>
                     </tr>
                     <tr>
-                      <td> Custom prefix and suffix for your in-game name</td>
+                      <td>20 drachmas a week</td>
                     </tr>
                     <tr>
-                      <td>Ability to set a home in one additional location</td>
+                      <td>Perk 3</td>
                     </tr>
                     <tr>
-                      <td>Access to a private Backer Discord channel for sneak peeks and discussions</td>
+                      <td>Perk 4</td>
                     </tr>
                     <tr>
-                      <td>Monthly Backer-exclusive events with special rewards</td>
+                      <td>Perk 5</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/LBFYNT4AV4TMU">Purchase</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/LBFYNT4AV4TMU">Donate</a>
               </div>
             </div>
           </div>
@@ -399,24 +393,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>30 drachmas a week (Includes Supporter and Backer perks)</td>
+                      <td>Perk 1</td>
                     </tr>
                     <tr>
-                      <td>Exclusive Benefactor cosmetic item (such as a cape or hat)</td>
+                      <td>30 drachmas a week</td>
                     </tr>
                     <tr>
-                      <td> Increased daily claim block limit in the survival world</td>
+                      <td>Perk 3</td>
                     </tr>
                     <tr>
-                      <td>Ability to fly in your own claimed land</td>
+                      <td>Perk 4</td>
                     </tr>
                     <tr>
-                      <td>Quarterly Benefactor-only build competitions with substantial prizes</td>
+                      <td>Perk 5</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TRWQVWJX8KJNE">Purchase</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TRWQVWJX8KJNE">Donate</a>
               </div>
             </div>
           </div>
@@ -431,24 +425,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>100 drachmas a week (Includes Supporter, Backer, and Benefactor perks)</td>
+                      <td>Perk 1</td>
                     </tr>
                     <tr>
-                      <td>Unique Enthusiast particle effects for your character</td>
+                      <td>100 drachmas a week</td>
                     </tr>
                     <tr>
-                      <td>Access to a private Enthusiast Discord server for direct communication with staff</td>
+                      <td>Perk 3</td>
                     </tr>
                     <tr>
-                      <td>Monthly Enthusiast-only Q&A sessions with server developers</td>
+                      <td>Perk 4</td>
                     </tr>
                     <tr>
-                      <td>Custom Enthusiast statue or monument built in the spawn area, showcasing your username and contributions</td>
+                      <td>Perk 5</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TGLAQTWGYCNL6">Purchase</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TGLAQTWGYCNL6">Donate</a>
               </div>
             </div>
           </div>
@@ -596,30 +590,24 @@ Loading ...</div>
   <script>
     $(".button-collapse").sideNav();
   </script>
-<script>
-  function loadServerInfo(url, containerId, callback) {
-      $.getJSON(url, function(r) {
-          //data is the JSON string
-          if (r.error) {
-              $('#' + containerId).html('Server Offline');
-              return true;
-          }
-          var pl = '';
-          if (r.players.sample.length > 0) {
-              pl = '<br>OP: ' + r.players.sample[0].name;
-          }
-          $('#' + containerId).html('<br><b>Players Online:</b> ' + r.players.online + pl);
-          if (callback) callback(); // Call the callback function if provided
-      });
-  }
+    <script>
+        //based on a pen by @robinselmer
+var url = "https://api.minetools.eu/ping/blocksmc.com"; //insert  server here
 
-  // Call the function for each server, using a callback to ensure sequential loading
-  loadServerInfo("https://api.minetools.eu/ping/blocksmc.com", "rest1", function() {
-      loadServerInfo("https://api.minetools.eu/ping/mc.hypixel.net", "rest2", function() {
-          loadServerInfo("https://api.minetools.eu/ping/play.smpearth.com", "rest3");
-      });
-  });
-</script>
+$.getJSON(url, function(r) {
+  //data is the JSON string
+  if (r.error) {
+    $('#rest').html('Server Offline');
+    return true;
+  }
+  var pl = '';
+  if (r.players.sample.length > 0) {
+    pl = '<br>OP: ' + r.players.sample[0].name;
+  }
+  $('#rest').html('<br><b>Players Online:</b> ' + r.players.online + pl);
+
+});
+    </script>
 </body>
 
 </html>
