--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Balcado ⛏" />
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft." />
-  <link rel="icon" type="image/png" href="./src/img/balcado.png" sizes="64x64">
+  <link rel="icon" type="image/png" href="./src/img/balcado.png" sizes="128x128">
 </head>
 
 <body>
 
   <!-- Nav -->
-  <div class="header" style="background: url('./src/img/cityscape2.png'); background-position: 50% 10%; background-attachment: fixed;">
+  <div class="header" style="background: linear-gradient(90deg, #9d00ff, #6b83fc, #9d00ff);     transition: background 1.5s ease-in-out; background-position: 50% 10%; background-attachment: fixed;
+  /* url('./src/img/cityscape2.png');  background-position: 50% 10%; background-attachment: fixed; */">
     <div class="navbar-fixed">
       <nav class="z-depth-0">
-        <div class="nav-wrapper">
+        <div class="nav-wrapper">   
             
           <a style="color: white !important;" href="#!" class="brand-logo">BAlcAdo
 </a>    
@@ -72,10 +73,10 @@
           </ul>
         </div>
       </nav>
+    </div>
 
       <!-- / Nav -->
 
-    </div>
     <div class="header-content center-align" data-aos="fade">
       <h1 style="padding-top: 6%;">Welcome to Balcado²</h1>
       <h5 style="">Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™</h5>
@@ -332,19 +333,19 @@
   <!-- /Screenshots -->
 
   <!-- Contact -->
-  <div class="contact" id="contact" style="background: url('./src/img/cityscape2.png'); background-position: 50% 10%; background-attachment: fixed;">
+  <div class="contact" id="contact" style="background: linear-gradient(90deg, #9d00ff, #6b83fc, #9d00ff);     transition: background 1.5s ease-in-out; background-position: 50% 10%; background-attachment: fixed;">
     <div class="main">
       <div class="card-panel" data-aos="fade-up" style=" background-color: rgba(255,255,255,0.1) !important; backdrop-filter: blur(8px) !important; ">
-        <h4 style="color: white;" class="center-align">Contact Us</h4>
-        <form class="col s12">
+        <h4 style="color: white;" class="center-align">Contact Us?</h4>
+     <form class="col s12">
           <div class="row">
             <div class="input-field col s6" >
               <input style="color: white;"  type="text" class="form-control" id="name" name="name" placeholder="Name" required />
-              <label  style="color: white;" for="name"><b>Name</b></label>
+              <label  style="color: white;"  for="name"><b>Name <i class="fa fa-user fa-1x"></i></b></label>
             </div>
             <div class="input-field col s6">
               <input style="color: white;"  type="text" class="form-control" id="email" name="email" placeholder="Email"  required />
-              <label  style="color: white;" for="email"><b>Email</b></label>
+              <label  style="color: white;" for="email"><b>Email <i class="fa fa-envelope fa-1x"></i></b></label>
             </div>
           </div>
           <div class="row">
@@ -352,7 +353,7 @@
               <div class="row">
                 <div class="input-field col s12">
                   <textarea style="color: white;"  id="message" class="materialize-textarea"></textarea>
-                  <label style="color: white;"  for="message"><b>Your Message</b></label>
+                  <label style="color: white;"  for="message"><b>Your Message <i class="fa fa-message fa-1x"></i></b></label>
                 </div>
               </div>
               <div>
