--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -104,7 +104,7 @@ Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-          <button onclick="copyMessage2()" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <span data-clipboard-text="play.yourip.here" class="coloured" id="copy"><span style="opacity: 1;">play.mcminigames.com </span></span>
+          <button onclick="copyMessage2()" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <span data-clipboard-text="play.yourip.here" class="coloured" id="copy">play.mcminigames.com</span>
             <i class="fa fa-plug fa-1x"></i> </button>
         </div>
         <div class="col l4 s12">
