--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -35,7 +35,10 @@
   <script src="../src/js/nav.js"></script>
   <script src="../src/js/script.js"></script>
 
-  <!-- Site Title -->
+<!--Clipboard.js-->
+<script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js" async></script>
+  
+<!-- Site Title -->
   <title>Evolution ⛏</title>
 
   <!-- Meta Info -->
@@ -607,8 +610,6 @@ Loading ...</div>
       // disable: 'mobile',
     });
   </script>
-<!--Clipboard.js-->
-<script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js"></script>
   
 <script>
   new Clipboard('#copy');
