--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -119,7 +119,8 @@ Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-          <button  class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
+          <button  class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"><span data-clipboard-text="s.balcado.com" class="coloured" id="copy">Connect</span>
+            <i class="fa fa-plug fa-1x"></i> </button>
         </div>
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/ender-icon.png">
@@ -611,9 +612,9 @@ Loading ...</div>
     });
   </script>
   
-<script>
-  new Clipboard('#copy');
-  </script>
+  <script>
+    new Clipboard('#copy');
+    </script>
 <!-- Mobile Nav INIT -->
   <script>
     $(".button-collapse").sideNav();
