--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -611,7 +611,7 @@ Loading ...</div>
     });
   </script>
   <!--Clipboard.js-->
-<script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js" async></script>
+<script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js"></script>
   <script>
     new Clipboard('#copy');
     </script>
