--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -99,14 +99,15 @@
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/dirt-icon.png">
           <h4>Survival</h4>
+          <span id="connect1">Connect1</span>
+<span id="connect2">Connect2</span>
           <i class="chip">
         <div id="rest1">
 Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-            <button onclick="copyToClipboard('#connect1')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"><span id="connect1">Connect</span>
-            <i class="fa fa-plug fa-1x"></i> </button>
+            <button onclick="copyToClipboard('#connect1')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
         </div>
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/stone-icon.png">
@@ -117,7 +118,7 @@ Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-          <button   onclick="copyToClipboard('#connect2')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"><span id="connect2">Connect</span>
+            <button onclick="copyToClipboard('#connect2')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
             <i class="fa fa-plug fa-1x"></i> </button>
         </div>
         <div class="col l4 s12">
@@ -128,8 +129,8 @@ Loading ...</div>
 Loading ...</div>
           </i>
           <p>COMING SOON</p>
-          <button onclick="copyToClipboard('#connect3')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"><span id="connect3">Connect</span>
-          </div>
+          <button onclick="copyToClipboard('#connect3')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
+        </div>
       </div>
     </div>
   </div>
