--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -33,10 +33,9 @@
   <!-- Theme JS -->
   <script src="../src/js/smoothscroll.js"></script>
   <script src="../src/js/nav.js"></script>
+  <script src="../src/js/script.js"></script>
 
-
-  
-<!-- Site Title -->
+  <!-- Site Title -->
   <title>Evolution ⛏</title>
 
   <!-- Meta Info -->
@@ -99,15 +98,13 @@
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/dirt-icon.png">
           <h4>Survival</h4>
-          <span id="connect1">Connect1</span>
-<span id="connect2">Connect2</span>
           <i class="chip">
         <div id="rest1">
 Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-            <button onclick="copyToClipboard('#connect1')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
+          <button onclick="copyMessage2()" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
         </div>
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/stone-icon.png">
@@ -118,8 +115,7 @@ Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-            <button onclick="copyToClipboard('#connect2')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
-            <i class="fa fa-plug fa-1x"></i> </button>
+          <button  class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
         </div>
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/ender-icon.png">
@@ -129,7 +125,7 @@ Loading ...</div>
 Loading ...</div>
           </i>
           <p>COMING SOON</p>
-          <button onclick="copyToClipboard('#connect3')" class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;"> <i class="fa fa-plug fa-1x"></i>Connect </button>
+          <button class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
         </div>
       </div>
     </div>
@@ -610,10 +606,8 @@ Loading ...</div>
       // disable: 'mobile',
     });
   </script>
-  <!--Clipboard.js-->
-    <script src="../src/js/script.js"></script>
 
-<!-- Mobile Nav INIT -->
+  <!-- Mobile Nav INIT -->
   <script>
     $(".button-collapse").sideNav();
   </script>
