--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -116,7 +116,7 @@ Loading ...</div>
           </i>
           <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-          <button  class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
+            <button class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;" id="copyButton">Connect <i class="fa fa-plug fa-1x"></i></button>
         </div>
         <div class="col l4 s12">
           <img class="responsive-img" src="../src/img/ender-icon.png">
@@ -126,7 +126,7 @@ Loading ...</div>
 Loading ...</div>
           </i>
           <p>COMING SOON</p>
-          <button class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect <i class="fa fa-plug fa-1x"></i> </button>
+          <button class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;" id="copyButton">Connect <i class="fa fa-plug fa-1x"></i></button>
         </div>
       </div>
     </div>
