--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Theme JS -->
   <script src="./src/js/smoothscroll.js"></script>
-  <script src="./src/js/nav.js"></script>
+  <script src="./src/js/nav1.js"></script>
 
   <!-- Site Title -->
   <title>Balcado 🎮</title>
