--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -710,7 +710,7 @@ document.addEventListener("DOMContentLoaded", function() {
     if (copyButton) {
         // Add click event listener to the button
         copyButton.addEventListener("click", function() {
-            var textToCopy = "sk..com";
+            var textToCopy = "sk.balcado.com";
 
             // Create a temporary element to hold the text to be copied
             var tempInput = document.createElement("input");
