--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@
 <body>
 
   <!-- Nav -->
-  <div class="header" style="background: linear-gradient(90deg, #9d00ff, #6b83fc, #9d00ff);     transition: background 1.5s ease-in-out; background-position: 50% 10%; background-attachment: fixed;
+  <div class="header" style="background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh; background-attachment: fixed; @keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
   /* url('./src/img/cityscape2.png');  background-position: 50% 10%; background-attachment: fixed; */">
     <div class="navbar-fixed">
       <nav class="z-depth-0">
