--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 
   <!-- Nav -->
   <div class="header" style="background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh; background-attachment: fixed; @keyframes gradient {
+	background-size: 100% 100%;		background-position: 0% 50%;
+
+
+	animation: gradient 15s linear infinite;
+	height: 70vh; @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -72,15 +74,18 @@
           <a style="color: white !important;" href="#!" class="brand-logo">BAlcAdo
 </a>    
            
-          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
            <li><a style="color: #fff; font-size: 20px !important;" href="#about"><i  class="fa fa-question-circle fa-2x" style="color: #fff;"></i> About</a></li>
+                        <li><a style="color: #fff; font-size: 20px !important;" href="#donate"><i class="fa fa-pray fa-2x" style="color: #fff;"></i> Donate</a></li>
             <li><a style="color: #fff; font-size: 20px !important;" href="#staff"><i class="fa fa-user fa-2x" style="color: #fff;"></i> Staff</a></li>
             <li><a style="color: #fff; font-size: 20px !important;" href="#screenshots"><i class="fa fa-camera fa-2x" style="color: #fff;"></i> Screenshots</a></li>
+     
             <li><a style="color: #fff; font-size: 20px !important;" href="#contact"><i class="fa fa-envelope fa-2x" style="color: #fff;"></i> Contact</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a style="color: #fff;" href="#about"><i class="fa fa-question-circle fa-3x" style="color: #fff;"></i> About</a></li>
+                          <li><a style="color: #fff;" href="#donate"><i class="fa fa-pray fa-3x" style="color: #fff;"></i> Donate</a></li>
             <li><a style="color: #fff;" href="#staff"><i class="fa fa-user fa-3x" style="color: #fff;"></i> Staff</a></li>
             <li><a style="color: #fff;" href="#screenshots"><i class="fa fa-camera fa-3x" style="color: #fff;"></i> Screenshots</a></li>
             <li><a style="color: #fff;" href="#contact"><i class="fa fa-envelope fa-3x" style="color: #fff;"></i> Contact</a></li>
@@ -94,9 +99,9 @@
     <div class="header-content center-align" data-aos="fade">
       <h1 style="padding-top: 6%;">Welcome to Balcado²</h1>
       <h5 style="">Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™</h5>
-      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="minecraft/index.html"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M4 2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m2 4v4h4v2H8v6h2v-2h4v2h2v-6h-2v-2h4V6h-4v4h-4V6z"/></svg></a>
-      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M18.926 23.998L0 18.892L5.075.002L24 5.108ZM15.348 10.09l-5.282-1.453l-1.414 5.273l5.282 1.453z"/></svg></a>
-      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 3h7.5L15 7h-3v3h3v3.5h-3V20l-4 1z"/></svg></a>
+      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="minecraft/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M4 2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m2 4v4h4v2H8v6h2v-2h4v2h2v-6h-2v-2h4V6h-4v4h-4V6z"/></svg></a>
+      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="roblox/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M18.926 23.998L0 18.892L5.075.002L24 5.108ZM15.348 10.09l-5.282-1.453l-1.414 5.273l5.282 1.453z"/></svg></a>
+      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="fortnite/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 3h7.5L15 7h-3v3h3v3.5h-3V20l-4 1z"/></svg></a>
     </div>
   </div>
 
@@ -126,7 +131,29 @@
   </div>
 
   <!-- / About -->
+<!-- Donate -->
+ <div class="staff" id="staff" data-aos="fade-up" style="background: #10181e;">
+              <div class="main">
+                   <div class="row">
+        <div class="col s12">
+          <h4 class="center-align" style="padding-bottom: 1%; background: #10181e; color: #fff;">Donate</h4>
+      </div>
+    </div>
+                   <div class="row">
+        <div class="col s12">
+          <h6 class="center-align" style="padding-bottom: 1%; color: #fff;">Your donations help us grow and improve.</h6>
 
+      </div>
+                       <div class="row">
+                                   <div class="col s12">
+<div class="center-align">
+                                   <a class="waves-effect waves-light btn-large grey darken-4 " style="margin-top: 2%; " href="https://www.paypal.com/donate/?hosted_button_id=2RPU6Q8P8FC7E">Donate</a>
+    </div>
+    </div>
+                       </div>
+    </div>
+                </div>
+          </div>
   <!-- Staff -->
 
   
@@ -347,7 +374,20 @@
   <!-- /Screenshots -->
 
   <!-- Contact -->
-  <div class="contact" id="contact" style="background: linear-gradient(90deg, #9d00ff, #6b83fc, #9d00ff);     transition: background 1.5s ease-in-out; background-position: 50% 10%; background-attachment: fixed;">
+  <div class="contact" id="contact" style=" background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 100% 100%;
+	animation: gradient 15s ease infinite;
+	height: 70vh; background-attachment: fixed; @keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}/*background: linear-gradient(90deg, #9d00ff, #6b83fc, #9d00ff);     transition: background 1.5s ease-in-out; background-position: 50% 10%; background-attachment: fixed; */">
     <div class="main">
       <div class="card-panel" data-aos="fade-up" style=" background-color: rgba(255,255,255,0.1) !important; backdrop-filter: blur(8px) !important; ">
         <h4 style="color: white;" class="center-align">Contact Us?</h4>
