--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -96,6 +96,55 @@
       </div>
     </div>
 </div> -->
+<!--<style>
+    .video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#bg-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    z-index: 0; /* Ensure the overlay is behind the video */
+}
+
+.content {
+    position: relative;
+    z-index: 1;
+    /* Add additional styling for your content overlay */
+}
+
+</style>
+<div class="video-container">
+    <video autoplay muted loop id="bg-video">
+        <source src="https://cdn.discordapp.com/attachments/1119726526703874229/1232666314645176330/balcado.mp4?ex=662a4977&is=6628f7f7&hm=6f29e7eadf157b9aa526082f2d85cf53580c43bc46b2fc6dffeb4bad2ccfd35e&" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div class="dark-overlay"></div> <!-- Dark overlay -->
+    <div class="content">
+      <!-- Your content goes here -->
+  </div>
+</div>-->
     <div class="header-content center-align" data-aos="fade">
       <h1 style="padding-top: 6%;">Welcome to <span style="font-family: Major Mono Display;">EVOLUTION  </span> </h1>
       <h5 style="">Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.</h5>
