--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                Hey there, I'm Koru. Maro's lending me a hand to write this because, well, I'm too lazy to do it myself. Anyway, in this server, I'm a dev, tasked with fixing bugs in specific plugins. Once that's sorted, it's straight back to bed for me.
+                        i ran out of ideas
               </blockquote>
             </div>
           </div>
@@ -344,8 +344,7 @@
             <div class="col s12 center-align">
               <h5>Anes (Nightmaree__)</h5>
             </div>
-            Hey, I'm Anes! Ever since I was a kid, I've always dreamed of being part of a community that's just like me—funny, awesome, and unique. That's why I decided to join Balcado. It's the perfect place for me to find where I belong.
-
+              
           </div>
           <div class="row">
             <div class="col s12">
