--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@ $.getJSON(url, function(r) {
         });
 
       </script>
+      <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
       </div>
 
 </body>
