--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
 
   <!-- Meta Info -->
   <meta charset="UTF-8">
+  <meta property="og:type" content="website">
   <meta name="author" content="7TE &amp; Z_Maro">
-  <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.">
+  <meta property="og:description" name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.">
   <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer">
+  <meta property="og:url" content="https://balcado.github.io" />
+  <meta property="og:image" content="./src/img/balcado.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Balcado 🎮" />
+    <meta property="og:title" name="title" content="Balcado 🎮" />
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™" />
   <link rel="icon" type="image/png" href="./src/img/balcado.png" sizes="128x128">
 </head>
-
 <body>
  <style>
      .loader-wrapper {
