--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <!-- Theme JS -->
   <script src="./src/js/smoothscroll.js"></script>
   <script src="./src/js/nav1.js"></script>
-
+  <script type="module">
+    import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
+    </script>
   <!-- Site Title -->
   <title>Balcado 🎮</title>
 
