--- a/index.html
+++ b/index.html
@@ -24,16 +24,24 @@
 
   <!-- MC Player Counter -->
   <script src="https://cdn.rawgit.com/leonardosnt/mc-player-counter/1.1.0/dist/mc-player-counter.min.js"></script>
-
+ <!-- Place the UnoCSS stylesheet link here -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unocss@0.59.4/uno.css">
+    <!-- Place the UnoCSS module import script here -->
+    <script type="module">
+        import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
+    </script>
   <!-- Theme's Stylesheet -->
   <link rel="stylesheet" href="./src/css/theme.css" />
 
   <!-- Theme JS -->
   <script src="./src/js/smoothscroll.js"></script>
   <script src="./src/js/nav1.js"></script>
-  <script type="module">
-    import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
-    </script>
+   <!-- Place the UnoCSS stylesheet link here -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unocss@0.59.4/uno.css">
+   <!-- Place the UnoCSS module import script here -->
+   <script type="module">
+       import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
+   </script>
   <!-- Site Title -->
   <title>Balcado 🎮</title>
 
